fix: add gap between the two panels

--- a/src/federation-info-plugin/views/SchemaView/SchemaView.module.scss
+++ b/src/federation-info-plugin/views/SchemaView/SchemaView.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  margin-left: 80px;
 }
 
 .schemaView {
